force-app/main/default/objects/Requirement__c/fields/Added_to_Library__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Library__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to Library</label>
    <type>Checkbox</type>
</CustomField>