force-app/main/default/objects/Requirement__c/fields/Customer_Requirement_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requirement_ID__c</fullName>
    <label>Customer Requirement ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>