force-app/main/default/objects/Requirement__c/fields/Customer_Requirement_ID_Index__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requirement_ID_Index__c</fullName>
    <label>Customer Requirement ID Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>