force-app/main/default/objects/Requirement__c/fields/Effort_Level__c.field-meta.xml
<CustomField>
    <fullName>Effort_Level__c</fullName>
    <label>Effort Level</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>