force-app/main/default/objects/Requirement__c/fields/Mandatory_Status__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Status__c</fullName>
    <label>Mandatory Status</label>
    <type>TextArea</type>
</CustomField>