force-app/main/default/objects/Requirement__c/fields/Requirement_Index__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Index__c</fullName>
    <label>Requirement Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>