force-app/main/default/objects/Requirement__c/fields/Requirement_Plan_Text__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Plan_Text__c</fullName>
    <label>Requirement Plan Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>