force-app/main/default/objects/Requirement__c/fields/Requirement_Search__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Search__c</fullName>
    <label>Requirement Search</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>