force-app/main/default/objects/Requirement__c/fields/Requirement_Status__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Status__c</fullName>
    <label>Requirement Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>