force-app/main/default/objects/Requirement__c/fields/Response_HTML__c.field-meta.xml
<CustomField>
    <fullName>Response_HTML__c</fullName>
    <label>Response HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>