force-app/main/default/objects/Requirement__c/fields/Response_Limit__c.field-meta.xml
<CustomField>
    <fullName>Response_Limit__c</fullName>
    <label>Response Limit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>