force-app/main/default/objects/Requirement__c/fields/Response_Limit_Index__c.field-meta.xml
<CustomField>
    <fullName>Response_Limit_Index__c</fullName>
    <label>Response Limit Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>