force-app/main/default/objects/Requirement__c/fields/Score_Index__c.field-meta.xml
<CustomField>
    <fullName>Score_Index__c</fullName>
    <label>Score Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>