force-app/main/default/objects/Requirement__c/fields/Section_Index__c.field-meta.xml
<CustomField>
    <fullName>Section_Index__c</fullName>
    <label>Section Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>