force-app/main/default/objects/Requirement__c/fields/Status_Index__c.field-meta.xml
<CustomField>
    <fullName>Status_Index__c</fullName>
    <label>Status Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>