force-app/main/default/objects/Requirement__c/fields/Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Sub_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Requirements (Sub-Section)</relationshipLabel>
    <relationshipName>Requirements1</relationshipName>
    <type>Lookup</type>
</CustomField>